--- a/client/partials/admin/postStuff.html
+++ b/client/partials/admin/postStuff.html
@@ -28,6 +28,7 @@
   <div class="postCon" style="border-top:5px solid #243136; padding-top:10px; padding-bottom:10px;">
     <span class="label">Title</span>
     <input class="postTitle" placeholder="title" id="title"/>
+    {{>markdownBar}}
     <span class="label">Content</span>
     <textarea class="content" placeholder="Content"></textarea>
     <div class="label">Upload Image</div>
@@ -57,6 +58,7 @@
     <span class="label">Title</span>
     <input class="postTitle" placeholder="title" id="editTitle"/>
     <span class="label">Content</span>
+    {{>markdownBar}}
     <textarea class="content" placeholder="Content" id="editContent"></textarea>
     <div class="label">Upload Image</div>
     <input type="file" accept="image/*" class="upload" id="input">
