--- a/client/partials/article.html
+++ b/client/partials/article.html
@@ -14,7 +14,7 @@
     </span>
     <div>
       {{#if about.about}}
-        {{about.about}}
+        {{markdown about.about}}
         {{else}}
         OpenGuild created by FinchMFG is open source software. Make sure to change your about inside settings!
       {{/if}}
