--- a/client/style.scss
+++ b/client/style.scss
@@ -69,6 +69,45 @@ body{
   cursor: pointer;
 }
 
+a{
+  color: #52aab4;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.activeBttn{
+  background: #2b2b2b;
+}
+.activeAdmin{
+  background:#212d30;
+  color:white;
+}
+
+.markdownEditor{
+  margin-left:13px;
+  margin-right:20px;
+  width:calc(100% - 33px);
+  display: block;
+  text-align: left;
+  background: none;
+  .fa{
+    transition: .4s;
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-left:7px;
+    margin-right:.73%;
+    padding-right:7px;
+    font-size: 1em;
+    color:#536572;
+    cursor: pointer;
+    @include border-radius(3px);
+  }
+  .fa:hover{
+    background: #242b33;
+    color:white;
+  }
+}
+
 @media (min-width: 320px){
   /* login style */
   .loginCon{
@@ -434,6 +473,11 @@ body{
     color:#b4b4b4;
     font-family: $font-ops;
 
+    br{
+      height: 7px!important;
+      display: block;
+      content: " ";
+    }
     img{
       width: 100%;
       margin-bottom:10px;
@@ -442,6 +486,14 @@ body{
       font-size: 16px;
       text-align: justify;
       padding-top: 20px;
+    }
+    h1,h2,h3,h4{
+      margin-top:5px;
+      margin-bottom:5px;
+    }
+    p{
+      margin-top:5px;
+      margin-bottom:5px;
     }
     .title{
       font-size: 27px;
@@ -634,6 +686,9 @@ body{
         @include border-radius(4px);
         font-family: $font-ops;
         border:1px solid gainsboro;
+      }
+      .content{
+        height:250px;
       }
       .bosses{
         table{
