Change combat rogue to outlaw

--- a/client/partials/admin/settings.html
+++ b/client/partials/admin/settings.html
@@ -92,7 +92,7 @@
       <tr class="spec">
         <td><input type="checkbox" id="roA" checked="{{rc.roA}}"> Assassination</td>
         <td><input type="checkbox" id="roS" checked="{{rc.roS}}"> Subtlety</td>
-        <td><input type="checkbox" id="roC" checked="{{rc.roC}}"> Combat</td>
+        <td><input type="checkbox" id="roC" checked="{{rc.roC}}"> Outlaw</td>
       </tr>
     </table>
     <div class="type">Shaman</div>
