--- a/client/partials/recruiting.html
+++ b/client/partials/recruiting.html
@@ -169,7 +169,7 @@
         <img src="/rogue/subtlety.png" title="Subtlety Rogue"/>
         {{/if}}
         {{#if rc.roC}}
-        <img src="/rogue/combat.png" title="Combat Rogue"/>
+        <img src="/rogue/combat.png" title="Rogue Outlaw"/>
         {{/if}}
       </div>
     </div>
