--- a/client/partials/admin/settings.html
+++ b/client/partials/admin/settings.html
@@ -10,11 +10,10 @@
       $('.postTitle').val("{{st.title}}")
       $('.content').val(about)
     </script>
-    <!-- tabard upload
+    <!-- tabard upload -->
     <div class="label">Upload Tabard (The img tag size is 145x145 and object-fit)</div>
     <input type="file" accept="image/*" class="upload" id="tabardIn">
     <canvas id="tabardCan" style="display:none"></canvas>
-  -->
     <input style="display:none" id="tabardUp"/>
     <!-- background upload -->
     <div class="label">Upload Background (Recommended: 1920x1080 ~400KB)</div>
