--- a/client/partials/feed.html
+++ b/client/partials/feed.html
@@ -34,6 +34,9 @@
       {{#if equals currentPage "apply"}}
       {{>applyPage}}
       {{/if}}
+      {{#if equals currentPage "appSent"}}
+      {{>appSuccess}}
+      {{/if}}
     </div>
     <div class="widgets">
       {{>recruiting}}
