--- a/client/style.scss
+++ b/client/style.scss
@@ -254,6 +254,18 @@ a{
       cursor: pointer;
     }
   }
+  .appSuccCon{
+    padding:10px;
+    font-family: $font-var;
+    text-align: center;
+    color: white;
+    .hero{
+      font-size: 27px;
+    }
+    .subHero{
+      padding-top: 5px;
+    }
+  }
   .nav{
     border:1px solid #222222;
     width:calc(100% - 2px);
@@ -619,6 +631,9 @@ a{
         width: 100%;
         display: inline-block;
         border-bottom:1px solid #d1d6df;
+        .title{
+          cursor:default!important;
+        }
         div{
           float:left;
           padding:8px 10px 8px 10px;
@@ -629,6 +644,7 @@ a{
       .title{
         font-size: 16px;
         width:calc(70% - 20px);
+        cursor: pointer;
       }
       .cataSux{
         width:calc(10% - 20px);
@@ -642,6 +658,9 @@ a{
       }
       .diff{
         width:calc(20% - 20px)
+      }
+      select{
+        margin:10px 20px 0px 20px;
       }
       .postObj{
         color:#4c4d4d;
