--- a/client/style.scss
+++ b/client/style.scss
@@ -643,11 +643,11 @@ a{
       }
       .title{
         font-size: 16px;
-        width:calc(70% - 20px);
+        width:calc(66% - 20px);
         cursor: pointer;
       }
       .cataSux{
-        width:calc(10% - 20px);
+        width:calc(14% - 20px);
       }
       .date{
         width:calc(10% - 20px);
@@ -660,7 +660,21 @@ a{
         width:calc(20% - 20px)
       }
       select{
+        padding: 4px 4px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        border-radius: 3px;
+        border: 1px solid #c9c9c9;
+        box-shadow: none;
+        background-color: transparent;
+        background-image: none;
+        color:black;
+        line-height: 22px;
         margin:10px 20px 0px 20px;
+        option{
+          color:black;
+        }
       }
       .postObj{
         color:#4c4d4d;
