Lawn keeping + admin routes + context aware admin bar

--- a/client/partials/admin/admin.html
+++ b/client/partials/admin/admin.html
@@ -145,7 +145,7 @@
 <!-- seperated so that I can use it on the actual site if an admin is logged in -->
 <template name="adminHeader">
   <div class="adminHeader">
-    <div class="page" onclick="window.location.href='/admin'">
+    <div class="page">
       {{#if equals currentPage "admin"}}
       Home
       {{else}}
