--- a/client/partials/admin/settings.html
+++ b/client/partials/admin/settings.html
@@ -11,15 +11,20 @@
       $('.content').val(about)
     </script>
     <!-- tabard upload -->
-    <div class="label">Upload Tabard (The img tag size is 145x145 and object-fit)</div>
+    <div class="label">Upload Tabard ( The img tag size is 145x145 and object-fit )</div>
     <input type="file" accept="image/*" class="upload" id="tabardIn">
     <canvas id="tabardCan" style="display:none"></canvas>
     <input style="display:none" id="tabardUp"/>
     <!-- background upload -->
-    <div class="label">Upload Background (Recommended: 1920x1080 ~400KB)</div>
+    <div class="label">Upload Background ( Recommended: 1920x1080 ~400KB )</div>
     <input type="file" accept="image/*" class="upload" id="backgroundIn">
     <canvas id="backgroundCan" style="display:none"></canvas>
     <input style="display:none" id="backgroundUp"/>
+    <!-- ICO upload -->
+    <div class="label">Upload Favicon ( .ico format )</div>
+    <input type="file" accept="image/*" class="upload" id="faviIn">
+    <canvas id="faviCan" style="display:none"></canvas>
+    <input style="display:none" id="faviUp"/>
     <!-- recruting -->
     <span class="label">Recruiting</span>
     <div class="type">Death Knight</div>
@@ -118,10 +123,6 @@
         <td><input type="checkbox" id="warP" checked="{{rc.warP}}"> Protection</td>
       </tr>
     </table>
-    <!-- not live yet
-    <div class="label" style="margin-top:20px">Background Image</div>
-    <input type="file" accept="image/*" class="upload">
-  -->
   <button id="saveSettings">Save</button>
 </div>
 </template>
