Correct the for loop
Used to throw because of a for loop on undefined element (ques[amt+1]):
```
VM89120:8 Uncaught TypeError: Cannot read property 'replace' of undefined
    at <anonymous>:8:25
    at Function.t._insertNodeWithHooks (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at Function.t._insert (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at f._DOMRange.t.attach (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at Function.t._insert (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at f._DOMRange.t.attach (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at f._DOMRange.t.setMembers (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at t (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
    at Object.e.nonreactive (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:21)
    at f.View.t (aed6d814545f72c8e7c77152e4cb9aed14dbd668.js?meteor_js_resource=true:87)
```

Usually a good idea to straight up use the data for forloops.

--- a/client/partials/apply.html
+++ b/client/partials/apply.html
@@ -9,19 +9,13 @@
     <script>
     var ques = "{{ques}}"
     ques = ques.split('::,')
-
-    var amt = Number('{{quesCount}}')
-    amt += 1
-    for(var i = 0; i < amt; i++){
+      
+    for(var i = 0; i < ques.length; i++){
       ques[i] = ques[i].replace("::", "")
       $('.quesCon').append('<div class="quesTitle">'+ques[i]+'</div>')
       $('.quesCon').append('<input class="quesResp" placeholder="Response" id="qu'+i+'">')
     }
-
-    var first = $('<input class="quesResp" placeholder="Response" id="qu'+0+'">').val()
-    if(amt == 1 && first.length >= 1 ){
-      //do nothing
-    }else{
+    if(ques.length == 1 && ques[0] == ""){
       $('#qu0').hide()
       $('#buttenrino').hide()
       $('.quesCon').append('<div class="quesTitle">Looks like we are not accepting applications right now! Check back later!</div>')
